--- a/app/views/avoid_postings/versions/index.html.erb
+++ b/app/views/avoid_postings/versions/index.html.erb
@@ -48,9 +48,9 @@
     </p>
   <% end %>
   <% t.column(th: { class: "dnp-links" }, td: { class: "dnp-links" }) do |avoid_posting_version| %>
-    <%= link_to "Show", avoid_posting_path(avoid_posting_version.avoid_posting) %>
+    <%= link_to("Show", avoid_posting_path(avoid_posting_version.avoid_posting)) %>
     <% if CurrentUser.can_edit_avoid_posting_entries? %>
-      | <%= link_to "Edit", edit_avoid_posting_path(avoid_posting_version.avoid_posting) %>
+      | <%= link_to("Edit", edit_avoid_posting_path(avoid_posting_version.avoid_posting)) %>
     <% end %>
   <% end %>
 <% end %>
