Enable finalize migration

--- a/app/views/media_assets/mascots/index.html.erb
+++ b/app/views/media_assets/mascots/index.html.erb
@@ -63,5 +63,5 @@
 <%= render(partial: "media_assets/secondary_links") %>
 
 <% content_for(:page_title) do %>
-  Post Replacement Media Assets
+  Mascot Media Assets
 <% end %>
