Add more filesize tags

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<% render(partial: "static/embed", locals: { record: @user, name: @user.pretty_name, description: @user.level_string, post: @user.avatar }) %>
+<% render(partial: "static/embed", locals: { record: @user, name: @user.pretty_name, description: @user.title.presence || @user.level_string, post: @user.avatar }) %>
 
 <%= render "secondary_links" %>
 
