Fix slowness when forum topic has excessive votes

--- a/app/views/forums/posts/_listing.html.erb
+++ b/app/views/forums/posts/_listing.html.erb
@@ -1,7 +1,5 @@
 <%# locals: (forum_posts:, original_forum_post_id:) -%>
 
 <div class="list-of-forum-posts">
-  <% forum_posts.each do |forum_post| %>
-    <%= render "forums/posts/forum_post", forum_post: forum_post, original_forum_post_id: original_forum_post_id %>
-  <% end %>
+<%= render(partial: "forums/posts/forum_post", collection: forum_posts, as: :forum_post, locals: { original_forum_post_id: original_forum_post_id }) %>
 </div>
