--- a/app/javascript/src/styles/base/_colors.scss
+++ b/app/javascript/src/styles/base/_colors.scss
@@ -95,6 +95,7 @@ $forum-vote-up-color: green;
 $forum-vote-down-color: red;
 $forum-vote-meh-color: goldenrod;
 $forum-topic-new-color: red;
+$forum-topic-muted-color: #CCC;
 $forum-topic-except-color: gray;
 
 // Notification
