Add totals for popular

--- a/app/views/popular/searches.html.erb
+++ b/app/views/popular/searches.html.erb
@@ -1,4 +1,7 @@
 <h1>Most Searched: <%= date_range_description(@date, @scale, @min_date, @max_date) %></h1>
+<p id="total">
+  Total Searches: <%= ActiveSupport::NumberHelper.number_to_delimited(@ranking.sum { |r| r["count"] }) %>
+</p>
 
 <%= @nav.build(self) %>
 
