--- a/app/views/popular/top_missed_searches.html.erb
+++ b/app/views/popular/top_missed_searches.html.erb
@@ -1,4 +1,7 @@
 <h1>Top Missed Searches Of All Time</h1>
+<p id="total">
+  Total Missed Searches: <%= ActiveSupport::NumberHelper.number_to_delimited(@stats["missedSearchCount"]) %>
+</p>
 
 <p id="popular-nav-links">
   <span class="period">
