--- a/app/views/bulk_update_requests/show.html.erb
+++ b/app/views/bulk_update_requests/show.html.erb
@@ -10,7 +10,17 @@
 
 <div style="margin: 1em 0;">
   <h2>Script</h2>
-  <pre><%= format_text script_with_line_breaks(@bulk_update_request, with_decorations: true), allow_color: true %></pre>
+  <pre><%= format_text(script_with_line_breaks(@bulk_update_request, with_decorations: true), allow_color: true) %></pre>
+
+  <% changes = category_changes_for_bur(@bulk_update_request) %>
+  <% if changes.any? %>
+    <h3>Category Changes</h3>
+    <ul>
+      <% changes.each do |tag, category| %>
+        <li><strong class="text-yellow">The category of <%= link_to_wiki_or_new(tag.name) %> will be changed from <span class="tag-type-<%= tag.category %>"><%= TagCategory.get(tag.category).name %></span> to <span class="tag-type-<%= category %>"><%= TagCategory.get(category).name %></span></strong></li>
+      <% end %>
+    </ul>
+  <% end %>
 
   <%= render "bur_edit_links", bur: @bulk_update_request %>
 </div>
