--- a/app/views/forums/posts/_forum_post.html.erb
+++ b/app/views/forums/posts/_forum_post.html.erb
@@ -23,7 +23,7 @@
     <div class="content">
       <div class="dtext-container">
         <% if forum_post.is_aibur? %>
-          <%= format_text(tag_change_message(forum_post)) %>
+          <%= format_text(tag_change_message(forum_post), allow_color: true) %>
         <% end %>
 
         <%= format_text(parse_embedded_tag_request_text(forum_post.body), allow_color: CurrentUser.id == forum_post.creator_id || (CurrentUser.is_anonymous? || !CurrentUser.disable_colors?)) %>
