--- a/app/views/systems/show.html.erb
+++ b/app/views/systems/show.html.erb
@@ -211,7 +211,7 @@
       </tr>
       <tr>
         <td>Commit</td>
-        <td><%= @info.git.local.commit %>)</td>
+        <td><%= @info.git.local.commit %></td>
       </tr>
       <tr>
         <td>Tag</td>
