--- a/app/views/edit_histories/_secondary_links.html.erb
+++ b/app/views/edit_histories/_secondary_links.html.erb
@@ -2,7 +2,7 @@
   <%= subnav_link_to "Listing", edit_histories_path %>
   <% if params[:action] == "diff" %>
     <li>|</li>
-    <%= subnav_link_to "Back", edit_history_path(@thisversion.versionable_id, page: @thisversion.page, type: @thisversion.versionable_type, anchor: "edit-#{@thisversion.id}") %>
+    <%= subnav_link_to "Back", link_to_edit_history(@thisversion.versionable, page: @thisversion.page, anchor: "edit-#{@thisversion.id}") %>
     <%= subnav_link_to @thisversion.html_name.split[0...-1].join(" "), @thisversion.link(self) %>
   <% end %>
 <% end %>
