--- a/app/views/admin/bulk_update_request_imports/new.html.erb
+++ b/app/views/admin/bulk_update_request_imports/new.html.erb
@@ -4,28 +4,33 @@
   <pre>
 Use the following format:
 
-remove alias aaa -> bbb
-remove implication aaa -> bbb
-create alias aaa -> bbb
-create implication aaa -> bbb
-mass update aaa -> bbb
+unalias aaa -> bbb
+unimply aaa -> bbb
+alias aaa -> bbb
+imply aaa -> bbb
+update aaa -> bbb
+rename aaa -> bbb
+category aaa -> general
+deprecate aaa
+undeprecate bbb
+# comment
   </pre>
 
   <div class="input">
-    <label for="batch_text">
+    <label for="batch_script">
       Script
     </label>
-    <%= text_area("batch", "script", size: "60x20", value: @importer.try(:text)) %>
+    <%= text_area("batch", "script", size: "60x20", value: @importer.try(:script)) %>
     <% if @error %>
       <span class="error"><%= @error.message %></span>
     <% end %>
   </div>
 
   <div class="input">
-    <label for="batch_forum_id">
-      Forum ID
+    <label for="batch_topic_id">
+      Topic ID
     </label>
-    <%= text_field("batch", "forum_id", value: @importer.try(:forum_id)) %>
+    <%= text_field("batch", "topic_id", value: @importer.try(:topic_id)) %>
   </div>
 
   <%= submit_tag("Import") %>
