--- a/app/views/tags/aliases/_secondary_links.html.erb
+++ b/app/views/tags/aliases/_secondary_links.html.erb
@@ -5,7 +5,7 @@
   <%= subnav_link_to("Request alias", new_tag_alias_path) %>
   <%= subnav_link_to("Request bulk update", new_bulk_update_request_path) %>
   <%= subnav_link_to("Help", help_page_path(id: "tag_aliases")) %>
-  <% if policy(BulkUpdateRequestImporter).create? %>
+  <% if policy(BulkUpdateRequestImport).create? %>
     |
     <%= subnav_link_to("Import", new_admin_bulk_update_request_import_path) %>
   <% end %>
