--- a/app/views/users/_post_summary.html.erb
+++ b/app/views/users/_post_summary.html.erb
@@ -37,7 +37,7 @@
   </div>
 <% end %>
 
-<% if presenter.has_favorites? && !@user.hide_favorites? %>
+<% if presenter.has_favorites? && !@user.hide_favorites?(CurrentUser.user) %>
   <div class="box user-favorites">
     <h2 class="box-label">
       <%= link_to("Favorites", favorites_path(user_id: user.id)) %>
