--- a/app/views/static/site_map.xml.erb
+++ b/app/views/static/site_map.xml.erb
@@ -1,13 +1,8 @@
-<urlset xmlns="https://www.sitemaps.org/schemas/sitemap/0.9">
-  <%= sitemap_link(root_url) %>
-  <%= sitemap_link(api_documentation_url, changefreq: "daily") %>
-  <%= sitemap_link(posts_url, priority: "1.0", changefreq: "always") %>
-  <%= sitemap_link(forum_topics_url, priority: "0.8", changefreq: "always") %>
-  <%= sitemap_link(forum_posts_url, priority: "0.4", changefreq: "always") %>
-  <%= sitemap_link(artists_url, priority: "0.7", changefreq: "always") %>
-  <%= sitemap_link(help_pages_url, priority: "0.9", changefreq: "weekly") %>
-  <%= sitemap_link(news_updates_url, changefreq: "daily") %>
-  <%= sitemap_link(pools_url, priority: "0.7", changefreq: "always") %>
-  <%= sitemap_link(stats_url, changefreq: "daily") %>
-  <%= sitemap_link(wiki_pages_url, priority: "0.7", changefreq: "always") %>
-</urlset>
+<% case params[:type] %>
+<% when nil, "" %>
+  <%= render(partial: "static/site_maps/index") %>
+<% when "main" %>
+  <%= render(partial: "static/site_maps/main") %>
+<% when "posts" %>
+  <%= render(partial: "static/site_maps/posts", locals: { from: params[:from].to_i, to: params[:to].to_i }) %>
+<% end %>
