--- a/app/views/static/site_maps/_main.xml.erb
+++ b/app/views/static/site_maps/_main.xml.erb
@@ -1,6 +1,7 @@
 <% xml = Builder::XmlMarkup.new(indent: 2) %>
 <% xml.instruct!(:xml, version: "1.0", encoding: "UTF-8") %>
 <% xml.urlset(xmlns: "http://www.sitemaps.org/schemas/sitemap/0.9") do %>
+  <% now = Date.today.to_datetime %>
   <% xml.url do %>
     <% xml.loc(root_url) %>
   <% end %>
@@ -12,44 +13,53 @@
     <% xml.loc(posts_url) %>
     <% xml.priority("1.0") %>
     <% xml.changefreq("always") %>
+    <% xml.lastmod((Post.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(forum_topics_url) %>
     <% xml.priority("0.8") %>
     <% xml.changefreq("always") %>
+    <% xml.lastmod((ForumTopic.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(forum_posts_url) %>
     <% xml.priority("0.4") %>
     <% xml.changefreq("always") %>
+    <% xml.lastmod((ForumPost.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(artists_url) %>
     <% xml.priority("0.7") %>
     <% xml.changefreq("always") %>
+    <% xml.lastmod((Artist.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(help_pages_url) %>
     <% xml.priority("0.9") %>
     <% xml.changefreq("weekly") %>
+    <% xml.lastmod((HelpPage.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(news_updates_url) %>
     <% xml.changefreq("daily") %>
+    <% xml.lastmod((NewsUpdate.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(pools_url) %>
     <% xml.priority("0.7") %>
     <% xml.changefreq("always") %>
-  <% end %>
-  <% xml.url do %>
-    <% xml.loc(stats_url) %>
-    <% xml.changefreq("daily") %>
+    <% xml.lastmod((Pool.maximum(:updated_at) || now).utc.iso8601) %>
   <% end %>
   <% xml.url do %>
     <% xml.loc(wiki_pages_url) %>
     <% xml.priority("0.7") %>
     <% xml.changefreq("always") %>
+    <% xml.lastmod((WikiPage.maximum(:updated_at) || now).utc.iso8601) %>
+<% end %>
+  <% xml.url do %>
+    <% xml.loc(stats_url) %>
+    <% xml.changefreq("daily") %>
+    <% xml.lastmod(now.utc.iso8601) %>
   <% end %>
 <% end %>
 <%= xml.target!.html_safe %>
