Add important tag category

--- a/app/javascript/src/styles/base/_colors.scss
+++ b/app/javascript/src/styles/base/_colors.scss
@@ -167,7 +167,8 @@ $tag-categories: (
   "6": "invalid",
   "7": "meta",
   "8": "lore",
-  "9": "gender"
+  "9": "gender",
+  "10": "important"
 );
 
 $tag-categories-short: (
@@ -182,7 +183,8 @@ $tag-categories-short: (
   "spec": "species",
   "inv": "invalid",
   "meta": "meta",
-  "lor": "lore"
+  "lor": "lore",
+  "imp": "important"
 );
 
 $ratings: (
