--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -89,6 +89,7 @@
       ["Invalid tag count", "invalid_tags", "total_tags"],
       ["Lore tag count", "lore_tags", "total_tags"],
       ["Gender tag count", "gender_tags", "total_tags"],
+      ["Important tag count", "important_tags", "total_tags"],
     ]
   }) %>
 </div>
